--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Кава для бізнесу</title>
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <div class="header">
+    <!-- /////////////////////////////////////////   Header    //////////////////////////////////////// -->
+    <header class="header">
         <div class="header__up">
             <div class="header__wrapper container text-center">
 
@@ -18,73 +25,150 @@
 
                     <div class="header__item col">
                         <ul>
-                            <li>Харків</li>
-                            <li>т. +38(096)054-27-70</li>
-                            <li>т. +38(093)547-55-72</li>
+                            <!-- <li class="telephone">Харків </li> -->
+                            <a class="telephone" href="tel:+380960542770">ХАРКІВ +38(096)-0542770 </a>
+                            <a class="telephone" href="tel:+380935475572">+38(093)-5475572 </a>
                         </ul>
                     </div>
 
                     <div class="header__item col">
                         <ul>
-                            <li>Київ</li>
-                            <a class="telephone" href="tel:+380660227720">т. +38(066)022-77-20 </a>
+                            <li class="telephone">КИЇВ</li>
+                            <a class="telephone" href="tel:+380660227720">+38(066)-0227720 </a>
                         </ul>
                     </div>
 
                     <div class="header__item col">
                         <ul>
-                            <li>Харків</li>
-                            <li>т. +38(096)054-27-70</li>
-                            <li>т. +38(093)547-55-72</li>
+                            <li class="telephone">БРОВАРИ, БОРИСПІЛЬ</li>
+                            <a class="telephone" href="tel:+380989700921">+38(098)-9700921 </a>
                         </ul>
                     </div>
 
                     <div class="header__item col">
                         <ul>
-                            <li>Харків</li>
-                            <li>т. +38(096)054-27-70</li>
-                            <li>т. +38(093)547-55-72</li>
+                            <li class="telephone">БІЛА ЦЕРКВА</li>
+                            <a class="telephone" href="tel:+380504400492">+38(050)-4400492 </a>
                         </ul>
                     </div>
 
                     <div class="header__item col">
                         <ul>
-                            <li>Харків</li>
-                            <li>т. +38(096)054-27-70</li>
-                            <li>т. +38(093)547-55-72</li>
+                            <li class="telephone">ЧЕРКАСИ</li>
+                            <a class="telephone" href="tel:+380989700929">+38(098)-9700929 </a>
                         </ul>
                     </div>
 
                     <div class="header__item col">
                         <ul>
-                            <li>Харків</li>
-                            <li>т. +38(096)054-27-70</li>
-                            <li>т. +38(093)547-55-72</li>
+                            <li class="telephone">ВЕНДІНГ</li>
+                            <a class="telephone" href="tel:+380950252822">+38(095)-0252822 </a>
                         </ul>
+                    </div>
+
+                    <div class="header__item col">
+                        <button class="btn text-nowrap">Залишити заявку</button>
                     </div>
 
                 </div>
-            
+
             </div>
         </div>
         <div class="header__bottom">
-            <h1>Hello</h1>
+
+            <nav class="navbar navbar-expand-lg bg-light ">
+                <div class="container ">
+                    <img src="/img/Logo_header_194x48 1.png" alt="" width="194" height="48"
+                        class="d-inline-block align-text-top">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="btn text-nowrap" role="button" href="#">ПРО НАС</a>
+                            </li>
+
+                            <div class="btn-group">
+                                <li class="nav-item">
+                                    <a class="btn text-nowrap dropdown-toggle" data-bs-toggle="dropdown"
+                                        aria-expanded="false" href="#">
+                                        НАПРЯМКИ
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" type="button" href="#">Для магазинів та
+                                                торгівельних мереж</a></li>
+                                        <li><a class="dropdown-item" type="button" href="#">Для кафе, ресторанів,
+                                                офісів</a></li>
+                                        <li><a class="dropdown-item" type="button" href="#">Вендінг</a></li>
+                                    </ul>
+                                </li>
+                            </div>
+
+                            <div class="btn-group">
+                                <div class="nav-item">
+                                    <a class="btn text-nowrap dropdown-toggle" data-bs-toggle="dropdown"
+                                        aria-expanded="false" href="#">
+                                        ОБЛАДНАННЯ
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" type="button" href="#">Автомати, суперавтомати</a>
+                                        </li>
+                                        <li><a class="dropdown-item" type="button" href="#">Класичні постові
+                                                кавомашини</a></li>
+                                        <li><a class="dropdown-item" type="button" href="#">Кавомолки професійні</a>
+                                        </li>
+                                        <li><a class="dropdown-item" type="button" href="#">Вендінгові апарати</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                            <div class="btn-group">
+                                <div class="nav-item">
+                                    <a class="btn text-nowrap dropdown-toggle" data-bs-toggle="dropdown"
+                                        aria-expanded="false" href="#">
+                                        ТОВАРИ
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" type="button" href="#">Зернова кава</a></li>
+                                        <li><a class="dropdown-item" type="button" href="#">Капучино, шоколад,
+                                                молоко</a></li>
+                                        <li><a class="dropdown-item" type="button" href="#">Сиропи</a></li>
+                                        <li><a class="dropdown-item" type="button" href="#">Чай</a></li>
+                                        <li><a class="dropdown-item" type="button" href="#">Стакани, цукор</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                            <li class="nav-item">
+                                <a class="btn text-nowrap" role="button" href="#">КОНТАКТИ</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </div>
 
-        
+
+    </header>
+
+
+    <!-- /////////////////////////////////////////   Video    ////////////////////////////////////////     -->
+
+    <div class="fullscreen-bg">
+        <div class="overlay">
+            <button type="button" class="btn btn-success">Детальніше</button>
+        </div>
+        <video loop="" muted="" autoplay="" poster="" class="fullscreen-bg__video">
+            <source src="video/2.mp4" type="video/mp4">
+        </video>
     </div>
 
 
 
 
-
-
-
-
-
-
-    <!-- <script src="./bootstrap/bootstrap.min.css"></script>
-    <script src="./bootstrap/bootstrap.bundle.min.js"></script> -->
+    <script src="./bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
