--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="header__bottom">
 
-            <nav class="navbar navbar-expand-lg bg-light ">
+            <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container ">
                     <img src="/img/Logo_header_194x48 1.png" alt="" width="194" height="48"
                         class="d-inline-block align-text-top">
@@ -149,8 +149,6 @@
                 </div>
             </nav>
         </div>
-
-
     </header>
 
 
@@ -169,6 +167,7 @@
 
 
     <script src="./bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
