--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             <div class="header__wrapper container text-center">
 
                 <div class="row">
-
                     <div class="header__item col">
                         <ul>
                             <!-- <li class="telephone">Харків </li> -->
@@ -158,12 +157,115 @@
         <div class="overlay">
             <button type="button" class="btn btn-success">Детальніше</button>
         </div>
-        <video loop="" muted="" autoplay="" poster="" class="fullscreen-bg__video">
+        <video loop muted autoplay poster="" class="fullscreen-bg__video">
             <source src="video/2.mp4" type="video/mp4">
         </video>
     </div>
 
+    <!-- /////////////////////////////////////////   Main text    ////////////////////////////////////////     -->
 
+    <section class="main-text">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <p>
+                        Ми — команда професіоналів, яка працює на кавовому ринку України з 2005 року. За цей час ми
+                        здобули великий досвід в організації сервісу гарячих напоїв. Наша діяльність допомагає партнерам
+                        задовольнити потреби своїх клієнтів в цьому напрямку. Розроблені нами оригінальні рецепти
+                        впізнавані споживачами завдяки новітнім смакам та оформленню напоїв
+                    </p>
+
+                    <ul>
+                        <li>Більше 5000 клієнтів та торгівельних точок співпрацюють з нами.</li>
+                        <li>Понад 3 000 000 оригінальних напоїв щомісяця смакують наші щасливі споживачі.</li>
+                        <li>В 24 регіонах України помітна наша присутність (завдяки вендінговій мережі).</li>
+                        <li>16 років присутності на ринку дає можливості задовольнити будь-які потреби наших партнерів
+                            на всій території Україні.</li>
+                        <li>Фахівці компанії регулярно відвідують наших клієнтів, пропонуючи повний спектр сервісного
+                            обслуговування, від дрібного планового ремонту на місці, до капітального ремонту на
+                            території нашої майстерні.</li>
+                        <li>Ми гарантуємо максимально можливий прибуток при роботі з нашими продуктами.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- /////////////////////////////////////////   Icons    ////////////////////////////////////////     -->
+
+    <section class="icons">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="card text-center">
+                        <img src="/img/chashka.png" class="card-img-top" alt="icon">
+                        <div class="card-body">
+                            <p class="card-text">Наша кава виготовлена на ультрасучасних кавових фабриках Італії та
+                                Голандії (ICS) із застосуванням найкращого обладнання та професійних знань
+                                висококлассних світових спеціалістів. Богатство смаку і аромату, відбірні зерна і
+                                ідеально відточені рецепти блендів - основні відмінні особливості нової лінійки кави
+                                Bianchi</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card text-center">
+                        <img src="./img/kofe zel.png" class="card-img-top" alt="icon">
+                        <div class="card-body">
+                            <p class="card-text">Ми пропонуємо весь модельний ряд кавових машин для приготування кави
+                                від провідних виробників Європи: WMF (Німеччина), Bianchi (Італія), Carimali (Італія),
+                                Franke (Швейцарія), починая від простих кавомашин до суперавтоматів. Напої, виготовлені
+                                на цьому обладнанні, мають неповторний смак і високу якість, які підтверджують
+                                авторитетні спеціалісти кавової галузі.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card text-center">
+                        <img src="./img/servis_salat.png" class="card-img-top" alt="icon">
+                        <div class="card-body">
+                            <p class="card-text">Наші менеджери пропонують індивідуальні умови співпраці для кожного
+                                клієнта. Своєчасна доставка продуктів і якісне сервісне обслуговування обладнання
+                                вигідно відрізняють нас на ринку кавових послуг. Ми робимо обслуговування обладнання у
+                                власних сервісних центрах.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- /////////////////////////////////////////   Images    ////////////////////////////////////////     -->
+
+    <section class="images">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="image">
+                        <a href="#"><img src="./img/horeca.jpg" class="card-img-top" alt="horeca"></a>
+                        <!-- <img src="./img/horeca.jpg" class="card-img-top" alt="horeca"> -->
+                        <div class="bottom-left">ДЛЯ МАГАЗИНІВ<br>ТА ТОРГІВЕЛЬНИХ МЕРЕЖ</div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="image">
+                        <img src="./img/classic.jpg" class="card-img-top" alt="horeca">
+                        <div class="bottom-left">ДЛЯ КАФЕ, РЕСТОРАНІВ,<br>ОФІСІВ</div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="image">
+                        <img src="./img/vending.jpg" class="card-img-top" alt="horeca">
+                        <div class="bottom-left">ВЕНДІНГ</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="./bootstrap/bootstrap.bundle.min.js"></script>
