--- a/index.html
+++ b/index.html
@@ -155,10 +155,18 @@
 
     <div class="fullscreen-bg">
         <div class="overlay">
-            <button type="button" class="btn btn-success">Детальніше</button>
+            <p>
+                Ми — команда професіоналів, яка працює на кавовому ринку України з 2005 року. За цей час ми
+                здобули великий досвід в організації сервісу гарячих напоїв. Наша діяльність допомагає партнерам
+                задовольнити потреби своїх клієнтів в цьому напрямку. Розроблені нами оригінальні рецепти
+                впізнавані споживачами завдяки новітнім смакам та оформленню напоїв
+            </p>
         </div>
         <video loop muted autoplay poster="" class="fullscreen-bg__video">
             <source src="video/2.mp4" type="video/mp4">
+            <div class="bottom-left">
+                
+            </div>
         </video>
     </div>
 
@@ -168,13 +176,6 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <p>
-                        Ми — команда професіоналів, яка працює на кавовому ринку України з 2005 року. За цей час ми
-                        здобули великий досвід в організації сервісу гарячих напоїв. Наша діяльність допомагає партнерам
-                        задовольнити потреби своїх клієнтів в цьому напрямку. Розроблені нами оригінальні рецепти
-                        впізнавані споживачами завдяки новітнім смакам та оформленню напоїв
-                    </p>
-
                     <ul>
                         <li>Більше 5000 клієнтів та торгівельних точок співпрацюють з нами.</li>
                         <li>Понад 3 000 000 оригінальних напоїв щомісяця смакують наші щасливі споживачі.</li>
@@ -245,7 +246,6 @@
                 <div class="col">
                     <div class="image">
                         <a href="#"><img src="./img/horeca.jpg" class="card-img-top" alt="horeca"></a>
-                        <!-- <img src="./img/horeca.jpg" class="card-img-top" alt="horeca"> -->
                         <div class="bottom-left">ДЛЯ МАГАЗИНІВ<br>ТА ТОРГІВЕЛЬНИХ МЕРЕЖ</div>
                     </div>
                 </div>
