--- a/index.html
+++ b/index.html
@@ -155,17 +155,17 @@
 
     <div class="fullscreen-bg">
         <div class="overlay">
-            <p>
+            <!-- <p>
                 Ми — команда професіоналів, яка працює на кавовому ринку України з 2005 року. За цей час ми
                 здобули великий досвід в організації сервісу гарячих напоїв. Наша діяльність допомагає партнерам
                 задовольнити потреби своїх клієнтів в цьому напрямку. Розроблені нами оригінальні рецепти
                 впізнавані споживачами завдяки новітнім смакам та оформленню напоїв
-            </p>
+            </p> -->
         </div>
         <video loop muted autoplay poster="" class="fullscreen-bg__video">
             <source src="video/2.mp4" type="video/mp4">
             <div class="bottom-left">
-                
+
             </div>
         </video>
     </div>
@@ -176,6 +176,13 @@
         <div class="container">
             <div class="row">
                 <div class="col">
+                    <h1>ПРО КОМПАНІЮ</h1>
+                    <p>
+                        Ми — команда професіоналів, яка працює на кавовому ринку України з 2005 року. За цей час ми
+                        здобули великий досвід в організації сервісу гарячих напоїв. Наша діяльність допомагає партнерам
+                        задовольнити потреби своїх клієнтів в цьому напрямку. Розроблені нами оригінальні рецепти
+                        впізнавані споживачами завдяки новітнім смакам та оформленню напоїв
+                    </p>
                     <ul>
                         <li>Більше 5000 клієнтів та торгівельних точок співпрацюють з нами.</li>
                         <li>Понад 3 000 000 оригінальних напоїв щомісяця смакують наші щасливі споживачі.</li>
@@ -194,7 +201,7 @@
 
     <!-- /////////////////////////////////////////   Icons    ////////////////////////////////////////     -->
 
-    <section class="icons">
+    <!-- <section class="icons">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -236,7 +243,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- /////////////////////////////////////////   Images    ////////////////////////////////////////     -->
 
@@ -266,7 +273,61 @@
             </div>
         </div>
     </section>
+    <!-- /////////////////////////////////////////   Consultation    ////////////////////////////////////////     -->
 
+    <div class="consultation">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <img src="./img/cap.png" class="" alt="cap">
+                </div>
+                <div class="col">
+                    <form>
+                        <h4>Безкоштовна консультація нашого спеціаліста</h4>
+                        <div class="mb-3">
+                            <input type="text" class="form-control" id="validationName" placeholder="Ім'я" required>
+                        </div>
+                        <div class="mb-3">
+                            <input type="text" class="form-control" id="validationTelephone" placeholder="Телефон"
+                                required>
+                        </div>
+                        <div class="mb-3">
+                            <select id="validationCity" class="form-select" required>
+                                <option selected disabled value="">Ваше місто...</option>
+                                <option>Харків</option>
+                                <option>Київ</option>
+                                <option>Біла Церква</option>
+                            </select>
+                        </div>
+
+                        <button type="submit" class="btn">Залишити заявку</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <!-- /////////////////////////////////////////   SocialNet    ////////////////////////////////////////     -->
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="social">
+                        <h3>INSTAGRAM</h3>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="social">
+                        <h3>FACEBOOK</h3>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="social">
+                        <h3>TELEGRAM</h3>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
     <script src="./bootstrap/bootstrap.bundle.min.js"></script>
     <script src="./js/script.js"></script>
