--- a/index.html
+++ b/index.html
@@ -250,21 +250,21 @@
     <section class="images">
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col-lg-4">
                     <div class="image">
                         <a href="#"><img src="./img/horeca.jpg" class="card-img-top" alt="horeca"></a>
                         <div class="bottom-left">ДЛЯ МАГАЗИНІВ<br>ТА ТОРГІВЕЛЬНИХ МЕРЕЖ</div>
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-lg-4">
                     <div class="image">
                         <img src="./img/classic.jpg" class="card-img-top" alt="horeca">
                         <div class="bottom-left">ДЛЯ КАФЕ, РЕСТОРАНІВ,<br>ОФІСІВ</div>
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-lg-4">
                     <div class="image">
                         <img src="./img/vending.jpg" class="card-img-top" alt="horeca">
                         <div class="bottom-left">ВЕНДІНГ</div>
