--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                             </select>
                         </div>
 
-                        <button type="submit" class="btn">Залишити заявку</button>
+                        <button type="submit" class="btn send-request">Залишити заявку</button>
                     </form>
                 </div>
             </div>
@@ -330,6 +330,7 @@
     </div>
 
     <script src="./bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
