--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -20,7 +22,6 @@
     <header class="header">
         <div class="header__up">
             <div class="header__wrapper container text-center">
-
                 <div class="row">
                     <div class="header__item col">
                         <ul>
@@ -247,7 +248,7 @@
 
     <!-- /////////////////////////////////////////   Images    ////////////////////////////////////////     -->
 
-    <section class="images">
+    <!-- <section class="images">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
@@ -272,10 +273,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- /////////////////////////////////////////   Consultation    ////////////////////////////////////////     -->
 
-    <div class="consultation">
+    <section class="consultation">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -305,29 +306,207 @@
                 </div>
             </div>
         </div>
+    </section>
 
-        <!-- /////////////////////////////////////////   SocialNet    ////////////////////////////////////////     -->
+    <!-- /////////////////////////////////////////   SocialNet    ////////////////////////////////////////     -->
+    <section class="socialnet">
         <div class="container">
             <div class="row">
-                <div class="col">
-                    <div class="social">
+                <div class="col-lg-4">
+                    <div class="socialnet-item">
                         <h3>INSTAGRAM</h3>
+                        <img src="./img/instagram.png" alt="logo_instagram">
+                        <button class="btn btn-instagram">ПІДПИСАТИСЯ</button>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="social">
+                <div class="col-lg-4">
+                    <div class="socialnet-item">
                         <h3>FACEBOOK</h3>
+                        <img src="./img/facebook.png" alt="logo_facebook">
+                        <button class="btn btn-facebook">ПІДПИСАТИСЯ</button>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="social">
+                <div class="col-lg-4">
+                    <div class="socialnet-item">
                         <h3>TELEGRAM</h3>
+                        <img src="./img/telegram.png" alt="logo_telegram">
+                        <button class="btn btn-telegram">ПІДПИСАТИСЯ</button>
                     </div>
                 </div>
-
             </div>
         </div>
+    </section>
+
+    <!-- /////////////////////////////////////////   Partners    ////////////////////////////////////////     -->
+    <div class="separator">
+        <h3>НАШІ ПАРТНЕРИ</h3>
     </div>
+
+    <section class="partners">
+        <div class="container text-center">
+            <div class="row g-0">
+                <div class="col">
+                    <div class="partner">
+                        <img src="./img/partner1-1.png" alt="logo_instagram">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="partner">
+                        <img src="./img/partner1-2.png" alt="logo_facebook">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="partner">
+                        <img src="./img/partner2-1.png" alt="logo_instagram">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="partner">
+                        <img src="./img/partner2-2.png" alt="logo_facebook">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row g-0">
+                <div class="col">
+                    <div class="partner">
+                        <img src="./img/partner3-1.png" alt="logo_instagram">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="partner">
+                        <img src="./img/partner3-2.png" alt="logo_facebook">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="partner">
+                        <img src="./img/partner4-1.png" alt="logo_instagram">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="partner">
+                        <img src="./img/partner4-2.png" alt="logo_facebook">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <div class="partner">
+                        <img src="./img/partner5-1.png" alt="logo_instagram">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="partner">
+                        <img src="./img/partner5-2.png" alt="logo_instagram">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="partner">
+                        <img src="./img/partner5-3.png" alt="logo_instagram">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="partner">
+                        <img src="./img/partner5-4.png" alt="logo_instagram">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
+
+    <footer class="footer">
+        <div class="footer-items">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4 p-4 offset-md-1">
+                        <h6>ХОРЕКА</h6>
+                        <p class="footer-left">
+                            Встановлення кавових машин по містах: Харків, Київ, Біла Церква, Бровари, Бориспіль, Черкаси
+                        </p>
+                        <div class="row">
+                            <div class="col footer-left">
+                                <h6>Харків</h6>
+                                <p>
+                                    т. +38 0960542770
+                                </p>
+                                <p>
+                                    т. +38 0960542770
+                                </p>
+                            </div>
+                            <div class="col footer-left">
+                                <h6>Київ</h6>
+                                <p>
+                                    т. +38 0660227720
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col footer-left">
+                                <h6>Біла Церква</h6>
+                                <p>
+                                    т. +38 0960542770
+                                </p>
+                                <p>
+                                    т. +38 0960542770
+                                </p>
+                            </div>
+                            <div class="col footer-left">
+                                <h6>Бровари, Бориспіль</h6>
+                                <p>
+                                    т. +38 0660227720
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col footer-left">
+                                <h6>Черкаси</h6>
+                                <p>
+                                    т. +38 0960542770
+                                </p>
+                                <p>
+                                    т. +38 0960542770
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col footer-left">
+                                <h6>e-mail</h6>
+                                <p>
+                                    т. +38 0960542770
+                                </p>
+                                <p>
+                                    т. +38 0960542770
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-4 p-4 offset-md-2">
+                        <h6>ВЕНДІНГ</h6>
+                        <p>
+                            Встановлення вендінгового обладнання по містах:
+                            Харків, Київ, Біла Церква, Дніпро, Запоріжжя, Рівне, Львів,
+                            Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса,
+                            Миколаїв, Кривий Ріг, Маріуполь, Тернопіль
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="separator">
+            <h7>© 2016-2022 Bianchi professional</h7>
+        </div>
+    </footer>
+
+
 
     <script src="./bootstrap/bootstrap.bundle.min.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
